// Generated by PBufGeneratorProcessor
// Source File: org/glassfish/hk2/xml/test/pbuf/pc1/PBufPrecompileRootBean.java

syntax = "proto3";

package org.glassfish.hk2.xml.test.pbuf.pc1;

import "org/glassfish/hk2/xml/test/pbuf/pc1/PBufPrecompileChild.proto";
import "org/glassfish/hk2/xml/test/pbuf/pc2/PBufPrecompileChild2.proto";
import "org/glassfish/hk2/xml/test/pbuf/pc1/ThingBean.proto";
import "org/glassfish/hk2/xml/test/pbuf/pc1/ThingOneBean.proto";
import "org/glassfish/hk2/xml/test/pbuf/pc1/ThingTwoBean.proto";

// Copyright (c) 2017 Oracle and/or its affiliates. All rights reserved.
// This program and the accompanying materials are made available under the
// terms of the Eclipse Public License v. 2.0, which is available at
// http://www.eclipse.org/legal/epl-2.0.
// This Source Code may also be made available under the following Secondary
// Licenses when the conditions for such availability set forth in the
// Eclipse Public License v. 2.0 are satisfied: GNU General Public License,
// version 2 with the GNU Classpath Exception, which is available at
// https://www.gnu.org/software/classpath/license.html.
// SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
// This is a comment on the root bean
message PBufPrecompileRootBean {

    // This is a multiline comment
    // wherein there are multiple lines
    // for this comment.  I will supply now a limerick
    // There was a young man so benighted
    // He never knew when he was slighted;
    // He would go to a party
    // And eat just as hearty,
    // As if he'd been really invited.
    string name = 1;

    int32 itype = 2;

    repeated org.glassfish.hk2.xml.test.pbuf.pc2.PBufPrecompileChild2 remote_types = 3;

    // This is a single line comment
    repeated org.glassfish.hk2.xml.test.pbuf.pc1.PBufPrecompileChild local_types = 4;

    oneof FirstOneOf {

        org.glassfish.hk2.xml.test.pbuf.pc1.ThingBean first_thing = 5;

        org.glassfish.hk2.xml.test.pbuf.pc1.ThingBean second_thing = 6;
    }

    oneof SecondOneOf {

        org.glassfish.hk2.xml.test.pbuf.pc1.ThingOneBean third_thing = 7;

        org.glassfish.hk2.xml.test.pbuf.pc1.ThingTwoBean fourth_thing = 8;

        string fifth_thing = 9;
    }
}

