// Generated by PBufGeneratorProcessor
// Source File: org/glassfish/hk2/xml/test/pbuf/pc2/TypeBean.java

syntax = "proto3";

package org.glassfish.hk2.xml.test.pbuf.pc2;

// Copyright (c) 2017 Oracle and/or its affiliates. All rights reserved.
// This program and the accompanying materials are made available under the
// terms of the Eclipse Public License v. 2.0, which is available at
// http://www.eclipse.org/legal/epl-2.0.
// This Source Code may also be made available under the following Secondary
// Licenses when the conditions for such availability set forth in the
// Eclipse Public License v. 2.0 are satisfied: GNU General Public License,
// version 2 with the GNU Classpath Exception, which is available at
// https://www.gnu.org/software/classpath/license.html.
// SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
message TypeBean {

    int32 int = 1;

    int64 long = 2;

    bool boolean = 3;

    int32 byte = 4;

    string char = 5;

    int32 short = 6;

    float float = 7;

    double double = 8;

    string string = 9;
}

